# sonic-troubleshooting-demo-service

./: .gitignore  README.md  pyproject.toml  setup.cfg  setup.py
debian/: changelog  control  install
docs/readme/: phase_01_runbook.md  phase_02_runbook.md  phase_03_runbook.md  phase_04_runbook.md  phase_05_runbook.md  phase_06_runbook.md  phase_07_runbook.md  phase_08_runbook.md  phase_09_runbook.md  phase_10_runbook.md
integration/sonic-buildimage/: sonic-troubleshooting-demo-service.dep  sonic-troubleshooting-demo-service.mk
rules/: sonic-troubleshooting-demo-service.mk
scripts/: demo_02_run_manual.sh  demo_03_run_systemd.sh  demo_04_after.sh  sonic-troubleshooting-demo-service
sonic_troubleshooting_demo_service/: checks.py  command_runner.py  db_config_loader.py  db_constants.py  main.py  port_inspector.py  redis_client.py  remediation.py
systemd/: sonic-troubleshooting-demo-service.service
tests/: test_smoke.py
