[project]
name = "sonic-troubleshooting-demo-service"
version = "0.1.0"
description = "A small SONiC troubleshooting demo service for port inspection and controlled remediation"
requires-python = ">=3.9"
dependencies = [
    "redis>=5.0.0",
    "typer>=0.9.0",
    "rich>=13.7.0",
    "python-dotenv>=1.0.0"
]

[project.optional-dependencies]
testing = [
    "pytest>=8.0.0"
]

[project.scripts]
sonic-troubleshooting-demo-service = "sonic_troubleshooting_demo_service.main:app"

[tool.setuptools.packages.find]
include = ["sonic_troubleshooting_demo_service*"]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
