[metadata]
name = sonic-troubleshooting-demo-service
version = 0.1.0
description = SONiC troubleshooting demo service for port inspection and controlled remediation
author = Ronnit Burman
author_email = ronnitburman@gmail.com

[options]
packages = sonic_troubleshooting_demo_service
python_requires = >=3.9
install_requires =
    redis>=5.0.0
    typer>=0.9.0
    rich>=13.7.0
    python-dotenv>=1.0.0

[options.entry_points]
console_scripts =
    sonic-troubleshooting-demo-service = sonic_troubleshooting_demo_service.main:main
